--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,10 +25,12 @@
         <link rel="stylesheet" href="/CSS/addEmployee.css">
         <link rel="stylesheet" href="/CSS/documents.css">
         <link rel="stylesheet" href="/CSS/addDocument.css">
+        <link rel="stylesheet" href="/CSS/planning.css">
         <link rel="stylesheet" href="/CSS/navbar.css">
         <link rel="stylesheet" href="/CSS/footer.css">
         <link rel="stylesheet" href="/CSS/employeeCard.css">
         <link rel="stylesheet" href="/CSS/badgeDoc.css">
+        <link rel="stylesheet" href="/CSS/planning.css">
     <% } else { %>
         <!-- Styles pour la page de login -->
         <link rel="stylesheet" href="/CSS/login.css">
