--- a/views/pages/planning.ejs
+++ b/views/pages/planning.ejs
@@ -9,7 +9,7 @@
                 </div>
                 <div>
                     <h1 class="page-title">Planning</h1>
-                    <p class="page-subtitle">Consultez votre planning </p>
+                    <p class="page-subtitle">Consultez votre planning et gérez vos événements</p>
                 </div>
             </div>
         </div>
@@ -17,24 +17,16 @@
 
     <!-- Contenu principal de la page -->
     <div class="calendar-container">
-        <div>
-            <div>
+        <div class="calendar-toolbar">
+            <div class="toolbar-left">
                 <% if (user.role === 1) { %>
-                <button>
+                <button class="calendar-btn">
                     <i class="fas fa-plus"></i>Ajouter un événement
                 </button>
                 <% } %>
-                <button>
+                <button class="calendar-btn secondary">
                     <i class="fas fa-calendar-day"></i> Aujourd'hui
                 </button>
-            </div>
-            <div>
-                <span>Vues: </span>
-                <select name="viewSelector" id="viewSelector">
-                    <option value="dayGridDay">Jour</option>
-                    <option value="dayGridWeek" selected>Semaine</option>
-                    <option value="dayGridMonth">Mois</option>
-                </select>
             </div>
         </div>
 
@@ -42,8 +34,5 @@
     </div>
 </div>
 
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js"></script>
-    <script src="/JS/configCalendar.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js"></script>
+<script src="/JS/configCalendar.js"></script>
