--- a/public/CSS/_variables.scss
+++ b/public/CSS/_variables.scss
@@ -1,5 +1,5 @@
 // ! VARIABLES GLOBALES
-// Variables de couleurs principales
+// * Variables de couleurs principales
 $primary-color: #8F95D3;
 $secondary-color: #89DAFF;
 $tertiaire-color: #D3C4E3;
@@ -7,30 +7,35 @@ $quatuor-color: #DBB1BC;
 $valid-color: #64C36B;
 $white: #FFF;
 
-// Variables de tailles
+// * Variables de tailles
 $font-size-base: 16px;
 $font-size-sm: 14px;
 $font-size-lg: 18px;
 
-// Variables d'espacement
+// * Variables d'espacement
 $spacing-xs: 0.25rem;
 $spacing-sm: 0.5rem;
 $spacing-md: 1rem;
 $spacing-lg: 1.5rem;
 $spacing-xl: 3rem;
 
-// Variables de breakpoints
+// * Variables de breakpoints
 $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 
-// Variables pour liste des employés
+// * Variables pour liste des employés
 $card-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
 $card-shadow-hover: 0 20px 60px rgba(0, 0, 0, 0.15);
 $border-radius: 20px;
 $transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 
-// Variables de gradients
+// * Variables pour les box shadow
+$box-shadow-normal: 0 4px 15px rgba(143, 149, 211, 0.3);
+$box-shadow-hover: 0 8px 25px rgba(143, 149, 211, 0.4);
+
+// * Variables de gradients
 $primary-gradient: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
 $secondary-gradient: linear-gradient(135deg, #f56565 0%, #f093fb 100%);
+$tertiaire-gradient: linear-gradient(135deg, $tertiaire-color, $quatuor-color);
